# mini-flight-computer-25_26

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old  setup.sh
DevOps/Docker/: Dockerfile
components/AHRS/: CMakeLists.txt  NXPMotionSense.h  SensorFusion.cpp  matrix.c
components/FlightFSM/: CMakeLists.txt  FlightFSM.c  FlightStateAdapter.c
components/FlightFSM/include/: FlightFSM.h
components/IIS2MDC/: CMakeLists.txt
components/LPS22DF/: CMakeLists.txt
components/LSM6DSV80X/: CMakeLists.txt  lsm6dsv80x.c  lsm6dsv80x_reg.c
components/LSM6DSV80X/include/: lsm6dsv80x.h  lsm6dsv80x_reg.h
main/: BSP.c  BSP.h  CMakeLists.txt  Kconfig.projbuild  board_config.h  gpio_mgr.c  gpio_mgr.h  i2ctools_example_main.c  main.c  sd_logger.c  sd_logger.h  sensor_mgr.c  sensor_mgr.h
